# Rake

./: .gitignore  .rake_cache  CMakeLists.txt  README.md  Rakefile  SMART_CACHING.md  install.bat  install.sh  test_rakefile.txt
.cache/clangd/index/: cli.cpp.04E10501DD20A691.idx
.github/workflows/: build.yml
rake_parser/: Cargo.toml  rake
rake_parser/ffi/: cli.h  util.h
rake_parser/src/: cli.cpp  cli_old.cpp  lib.rs  lib_old.rs  main.rs
